--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^10.1.0",
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
