--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "api": "^6.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "firebase": "^10.1.0",
+    "nodemon": "^3.0.1",
     "notiflix": "^3.2.6",
     "paymongo": "^1.3.2",
     "react": "^18.2.0",
@@ -21,6 +25,7 @@
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "stripe": "^12.14.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
