--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-star-rate": "^0.2.0",
     "react-toastify": "^9.1.3",
     "stripe": "^12.14.0",
     "web-vitals": "^2.1.4"
