Remove server in calling

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "concurrently \"npm run client\" \"npm run server\"",
+    "dev": "concurrently \"npm run client\"",
     "client": "react-scripts start",
     "server": "nodemon server.js",
     "start": "node server",
